syntax = "proto3";

package order.v1;

option go_package = "microservices-platform/pkg/proto/order/v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// Order service definition
service OrderService {
  // Create a new order
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/api/v1/orders"
      body: "*"
    };
  }

  // Get order by ID
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {
    option (google.api.http) = {
      get: "/api/v1/orders/{order_id}"
    };
  }

  // Update order status
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse) {
    option (google.api.http) = {
      put: "/api/v1/orders/{order_id}/status"
      body: "*"
    };
  }

  // List orders for user
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {
      get: "/api/v1/orders"
    };
  }

  // Cancel order
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse) {
    option (google.api.http) = {
      post: "/api/v1/orders/{order_id}/cancel"
      body: "*"
    };
  }
}

// Order message
message Order {
  string order_id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  OrderStatus status = 5;
  string shipping_address = 6;
  string billing_address = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// Order item message
message OrderItem {
  string item_id = 1;
  string product_id = 2;
  string product_name = 3;
  int32 quantity = 4;
  double unit_price = 5;
  double total_price = 6;
}

// Order status enumeration
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_CONFIRMED = 2;
  ORDER_STATUS_PROCESSING = 3;
  ORDER_STATUS_SHIPPED = 4;
  ORDER_STATUS_DELIVERED = 5;
  ORDER_STATUS_CANCELLED = 6;
  ORDER_STATUS_REFUNDED = 7;
}

// Create order request
message CreateOrderRequest {
  string user_id = 1;
  repeated CreateOrderItem items = 2;
  string shipping_address = 3;
  string billing_address = 4;
}

// Create order item
message CreateOrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

// Create order response
message CreateOrderResponse {
  Order order = 1;
}

// Get order request
message GetOrderRequest {
  string order_id = 1;
}

// Get order response
message GetOrderResponse {
  Order order = 1;
}

// Update order status request
message UpdateOrderStatusRequest {
  string order_id = 1;
  OrderStatus status = 2;
}

// Update order status response
message UpdateOrderStatusResponse {
  Order order = 1;
}

// List orders request
message ListOrdersRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
  OrderStatus status_filter = 4;
}

// List orders response
message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Cancel order request
message CancelOrderRequest {
  string order_id = 1;
  string reason = 2;
}

// Cancel order response
message CancelOrderResponse {
  Order order = 1;
}